Fix spacing filter list and ad copy right in the end

--- a/src/components/SideBar/sidebar.css
+++ b/src/components/SideBar/sidebar.css
@@ -32,3 +32,24 @@
   height: 100%;
   overflow-y: scroll;
 }
+
+p.copy-right{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+p.copy-right span{
+  color: #5f6368;
+  text-decoration: none;
+  letter-spacing: .025em;
+  font-family: Roboto,Arial,sans-serif;
+  font-size: .75rem;
+  font-weight: 400;
+  line-height: 1rem;
+}
+
+p.copy-right span:hover{
+  color: #237ed4;
+  cursor: pointer;
+}
